<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>957</width>
    <height>715</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLabel" name="proj_label">
       <property name="text">
        <string>Project :</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QComboBox" name="proj_comboBox"/>
     </item>
     <item>
      <widget class="QLineEdit" name="path_lineEdit_2">
       <property name="text">
        <string/>
       </property>
       <property name="placeholderText">
        <string>search</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="search_Button">
       <property name="text">
        <string>Search</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLineEdit" name="path_lineEdit"/>
   </item>
   <item>
    <widget class="QLabel" name="folder_label">
     <property name="text">
      <string>Folder :</string>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_3">
       <item>
        <widget class="QListWidget" name="assetshot_listWidget"/>
       </item>
       <item>
        <widget class="QListWidget" name="char_listWidget"/>
       </item>
       <item>
        <widget class="QListWidget" name="department_listWidget"/>
       </item>
       <item>
        <widget class="QListWidget" name="verpub_listWidget"/>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QLabel" name="detail_label">
       <property name="frameShape">
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="text">
        <string>Dertail :</string>
       </property>
      </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QListWidget" name="astsht_listWidget"/>
       </item>
       <item>
        <widget class="QListWidget" name="result_listWidget"/>
       </item>
      </layout>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLineEdit" name="create_lineEdit">
       <property name="placeholderText">
        <string>create folder</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="create_Button_2">
       <property name="text">
        <string>New</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="save_Button">
       <property name="text">
        <string>Save</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="open_Button">
       <property name="text">
        <string>Open</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="close_Button">
       <property name="text">
        <string>Close</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
